--- a/src/index.scss
+++ b/src/index.scss
@@ -4,14 +4,6 @@
     box-sizing: border-box;
 }
 
-.check-scss {
-    color: midnightblue;
-    font-size: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100vh;
-    background-color: lightseagreen;
-    font-weight: 900;
+.app {
+    font-size: 30px;
 }
