--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,9 +1,11 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+@import "reset";
+@import "variables/global";
+@import "themes/light";
+@import "themes/dark";
 
 .app {
-    font-size: 30px;
+    font: var(--font-large);
+    background: var(--bg-color);
+    color: var(--primary-color);
+    min-height: 100vh;
 }
