add dark and light theme support, add navbar

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,5 +1,8 @@
 .app.dark {
     --bg-color: #152020;
+    --inverted-bg-color: #abe0e0;
     --primary-color: #db8f2b;
+    --inverted-primary-color: #ce2626;
     --secondary-color: #5babb4;
+    --inverted-secondary-color: #2f43a3;
 }
