--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,5 +1,8 @@
 .app.light {
     --bg-color: #abe0e0;
-    --primary-color: #343a40;
-    --secondary-color: #5b5b5b;
+    --inverted-bg-color: #152020;
+    --primary-color: #ce2626;
+    --inverted-primary-color: #db8f2b;
+    --secondary-color: #2f43a3;
+    --inverted-secondary-color: #5babb4;
 }
