--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -2,7 +2,6 @@
     --font-family-main: 'Times New Roman',  sans-serif;
 
     // --------Font Sizes Start--------//
-
     --font-size-small: 16px;
     --font-line-small: 24px;
     --font-small: var(--font-size-small) / var(--font-line-small) var(--font-family-main);
@@ -14,6 +13,9 @@
     --font-size-large: 32px;
     --font-line-large: 40px;
     --font-large: var(--font-size-large) / var(--font-line-large) var(--font-family-main);
-
     // --------Font Sizes End----------//
+
+    // --------Heights Start----------//
+    --navbar-height: 50px;
+    // --------Heights End-----------//
 }
