add style linter and fix bugs

--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -1,4 +1,4 @@
-*, *:before, *:after {
+*, *::before, *::after {
     box-sizing: border-box;
 }
 
@@ -11,7 +11,7 @@ thead, tr, th, td, main, canvas, embed, footer, header, nav, section, video {
     border: 0;
     font: inherit;
     vertical-align: baseline;
-    text-rendering: optimizeLegibility;
+    text-rendering: optimizelegibility;
     -webkit-font-smoothing: antialiased;
     text-size-adjust: none;
 }
@@ -32,7 +32,7 @@ blockquote, q {
     quotes: none;
 }
 
-blockquote:before, blockquote:after, q:before, q:after {
+blockquote::before, blockquote::after, q::before, q::after {
     content: none;
 }
 
@@ -42,6 +42,6 @@ table {
 }
 
 input {
-    -webkit-appearance: none;
+    appearance: none;
     border-radius: 0;
 }
