add Loader and ErrorBoundary

--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,5 +1,5 @@
 .app.light {
-    --bg-color: #abe0e0;
+    --bg-color: #199090;
     --inverted-bg-color: #152020;
     --primary-color: #ce2626;
     --inverted-primary-color: #db8f2b;
