install ant design and refactor some components

--- a/src/app/styles/themes/dark.scss
+++ b/src/app/styles/themes/dark.scss
@@ -1,8 +1,5 @@
 .app.dark {
-    --bg-color: #152020;
-    --inverted-bg-color: #abe0e0;
-    --primary-color: #db8f2b;
-    --inverted-primary-color: #ce2626;
-    --secondary-color: #5babb4;
-    --inverted-secondary-color: #2f43a3;
+    --bg-color: #000;
+    --header-bg-color: #000;
+    --border-color: #fff;
 }
