--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,8 +4,33 @@
 @import "themes/dark";
 
 .app {
-    font: var(--font-large);
     background: var(--bg-color);
-    color: var(--primary-color);
     min-height: 100vh;
+    width: 100%;
+
+    %common-border {
+        border: 1px solid var(--border-color);
+    }
+
+    .header {
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        padding-top: 20px;
+        background: var(--header-bg-color);
+
+        @extend %common-border
+    }
+
+    .content {
+        padding: 50px;
+
+        @extend %common-border
+    }
+
+    .footer {
+        text-align: center;
+
+        @extend %common-border
+    }
 }
