--- a/src/app/styles/themes/light.scss
+++ b/src/app/styles/themes/light.scss
@@ -1,8 +1,5 @@
 .app.light {
-    --bg-color: #199090;
-    --inverted-bg-color: #152020;
-    --primary-color: #ce2626;
-    --inverted-primary-color: #db8f2b;
-    --secondary-color: #2f43a3;
-    --inverted-secondary-color: #5babb4;
+    --bg-color: #fff;
+    --header-bg-color: #f5f5f5;
+    --border-color: #000;
 }
