--- a/src/widgets/PageError/ui/PageError.module.scss
+++ b/src/widgets/PageError/ui/PageError.module.scss
@@ -5,27 +5,10 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background: #199090;
-}
+    background: var(--black-color);
 
-.message {
-    font-size: 25px;
-    display: block;
-    margin-bottom: 20px;
-}
-
-.button {
-    width: 100px;
-    cursor: pointer;
-    padding: 10px;
-    outline: none;
-    font-size: 16px;
-    border: 1px solid black;
-    border-radius: 4px;
-    transition: 0.5s;
-    background-color: #c79516;
-
-    &:hover {
-        background-color: #ffa500;
+    .text {
+        font-size: 20px;
+        margin-bottom: 20px;
     }
 }
