add characters page and details page

--- a/src/pages/NotFoundPage/ui/NotFoundPage.module.scss
+++ b/src/pages/NotFoundPage/ui/NotFoundPage.module.scss
@@ -1,6 +1,6 @@
-.pageLoader {
+.notFoundPage {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
     width: 100%;
 }
