--- a/src/widgets/PageError/ui/PageError.module.scss
+++ b/src/widgets/PageError/ui/PageError.module.scss
@@ -1,10 +1,14 @@
 .pageError {
+    top: 0;
+    left: 0;
+    right: 0;
     width: 100%;
     height: 100vh;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    position: absolute;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
     background: var(--black-color);
 
     .text {
