--- a/src/entities/Character/ui/CharactersList/CharactersList.module.scss
+++ b/src/entities/Character/ui/CharactersList/CharactersList.module.scss
@@ -1,4 +1,9 @@
 .charactersList {
     display: flex;
-    width: 100%;
+    padding: 50px;
+    margin: 0 auto;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
 }
