--- a/src/pages/CharactersPage/ui/CharactersPage.module.scss
+++ b/src/pages/CharactersPage/ui/CharactersPage.module.scss
@@ -1,5 +1,9 @@
 .charactersPage {
     width: 100%;
     display: flex;
-    background-color: orange;
+    padding: 20px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--page-bg-color);
 }
