--- a/src/pages/CharactersPage/ui/CharactersPage.module.scss
+++ b/src/pages/CharactersPage/ui/CharactersPage.module.scss
@@ -3,10 +3,11 @@
     display: flex;
     padding: 40px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     background-color: var(--page-bg-color);
     border-radius: 8px;
+
 
     .searchInput {
         max-width: 400px;
