add character details page and implement character edit

--- a/src/pages/CharacterDetailsPage/ui/CharacterDetailsPage.module.scss
+++ b/src/pages/CharacterDetailsPage/ui/CharacterDetailsPage.module.scss
@@ -1,5 +1,8 @@
 .characterDetailsPage {
     width: 100%;
+    padding: 20px;
     display: flex;
-    background-color: blueviolet;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--page-bg-color);
 }
