--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -10,13 +10,9 @@
 
 .app {
     width: 100%;
-    min-width: 900px;
     min-height: 100vh;
+    min-width: 1000px;
     background: var(--bg-color);
-
-    %common-border {
-        border: 1px solid var(--border-color);
-    }
 
     .header {
         display: flex;
@@ -25,8 +21,6 @@
         justify-content: space-between;
         align-items: center;
         background: var(--header-bg-color);
-
-        @extend %common-border;
 
         .title {
             margin: 0;
@@ -38,14 +32,10 @@
 
     .content {
         display: flex;
-        padding: 50px;
-
-        @extend %common-border
+        padding: 0 50px 50px;
     }
 
     .footer {
         text-align: center;
-
-        @extend %common-border
     }
 }
